// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerInformation should render Default 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
    <div
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    />
  </aside>
</DocumentFragment>
`;

exports[`PeerInformation should render WithClassName 1`] = `
<DocumentFragment>
  <aside
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
    <div
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    />
  </aside>
</DocumentFragment>
`;

exports[`PeerInformation should render WithEmotion 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
    <div
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    />
  </aside>
</DocumentFragment>
`;

exports[`PeerInformation should render WithError 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`PeerInformation should render WithLoading 1`] = `<DocumentFragment />`;

exports[`PeerInformation should render WithoutCtaText 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
    <div
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    />
  </aside>
</DocumentFragment>
`;

exports[`PeerInformation should render WithoutCtaUrl 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    />
    <div
      class="emotion-4 emotion-5"
    />
    <div
      class="emotion-6 emotion-7"
    />
  </aside>
</DocumentFragment>
`;
